# hotel-reservations

./: Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
hotel_reservations/: __init__.py  dataset.py  features.py  plots.py
hotel_reservations/modeling/: predict.py  train.py
notebooks/: 1-data-analysis.ipynb  2-model-training.ipynb
