[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "hotel_reservations"
version = "0.0.1"
description = "Complete project of data science"
authors = [
  { name = "Felipe Rodighero" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["hotel_reservations"]
include = ["pyproject.toml", "hotel_reservations/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["hotel_reservations"]
force-sort-within-sections = true

